--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,10 +7,14 @@
     font-family: 'Lato', sans-serif;
 }
 
-.home, .all_bookings {
+/* .home {
     display: flex;
     height: 90vh;
     align-items: center;
     justify-content: center;
     font-size: 3rem;
+} */
+
+.listed-booking-title {
+    margin-top: 2rem;
 }
