--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -13,7 +13,7 @@
 }
 
 .nav-menu {
-    background-color: #fff;
+    background-color: #080808;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -40,7 +40,7 @@
 
 .nav-text a {
     text-decoration: none;
-    color: #060b26;
+    color: #fff;
     font-size: 18px;
     width: 95%;
     height: 100%;
@@ -51,7 +51,8 @@
 }
 
 .nav-text a:hover {
-    background-color: #1a83ff;
+    background-color: #fff;
+    color: #080808;
 }
 
 .nav-menu-items {
@@ -59,7 +60,7 @@
 }
 
 .navbar-toggle {
-    background-color: #fff;
+    background-color: #080808;
     width: 100%;
     height: 80px;
     display: flex;
@@ -81,7 +82,7 @@ span {
 
 
 .title {
-    color: #060b26;
+    color: #080808;
 }
 
 .login {
