Added more protection around normal user routes, users can only access if they have permission

--- a/client/src/components/MyBooking.css
+++ b/client/src/components/MyBooking.css
@@ -12,3 +12,8 @@
 .listed-booking-title {
     margin-left: 3rem;
 }
+
+.space-between {
+    display: flex;
+    justify-content: space-between;
+}
