--- a/client/src/components/RequestForm.css
+++ b/client/src/components/RequestForm.css
@@ -2,5 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 2rem;
+    margin-top: 6rem;
+}
+
+.booking-form {
+    margin-left: 2rem;
 }
