--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,3 +18,12 @@
 .listed-booking-title {
     margin-top: 2rem;
 }
+
+.pulse-loader{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
