--- a/client/src/components/HeroSection.css
+++ b/client/src/components/HeroSection.css
@@ -27,3 +27,9 @@
     display: flex;
     justify-content: center;
 }
+
+.message-alert-hero {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
