--- a/client/src/components/MyBooking.css
+++ b/client/src/components/MyBooking.css
@@ -3,10 +3,15 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .booking-item {
-    width: 60%;
+    margin-top: 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-bottom: 2rem;
+    width: 30%;
 }
 
 .listed-booking-title {
