Bookings are in order, changed api fetch so that it converts the dates into new Date objects so they can be minipulated easier

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,3 +27,11 @@
     width: 100%;
     height: 100vh;
 }
+
+.no-bookings {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    
+}
