All Users page almost done, need to do the sorting funcionality but then all done

--- a/client/src/components/HeroSection.css
+++ b/client/src/components/HeroSection.css
@@ -17,10 +17,11 @@
 }
 
 .hero-section {
-    margin-top: 18vh;
-    height: 60vh;
+    height: 90vh;
     align-items: center;
     justify-content: center;
+    background-image: url("../static/background_image.png");
+    background-size: cover;
 }
 
 .main-page-cards {
