--- a/client/src/components/HeroSection.css
+++ b/client/src/components/HeroSection.css
@@ -10,7 +10,6 @@
 
 .main-page-title {
     display: flex;
-    height: 10vh;
     font-size: 3rem;
     align-items: center;
     justify-content: center;
@@ -20,8 +19,11 @@
     height: 90vh;
     align-items: center;
     justify-content: center;
-    background-image: url("../static/background_image.png");
-    background-size: cover;
+    text-align: center;
+    background-image: url("../static/image_2.png");
+    background-size:     cover;    
+    background-repeat:   no-repeat;
+    background-position: center center;    
 }
 
 .main-page-cards {
