--- a/client/src/components/HeroSection.css
+++ b/client/src/components/HeroSection.css
@@ -1,4 +1,12 @@
 
+img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -1;
+}
+
 .new-booking-card {
     display: flex;
     height: 30vh;
@@ -9,21 +17,31 @@
 }
 
 .main-page-title {
+    margin-top: 8rem;
     display: flex;
     font-size: 3rem;
     align-items: center;
     justify-content: center;
 }
 
-.hero-section {
+/* .hero-section {
     height: 90vh;
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-image: url("../static/image_2.png");
+    /* background-image: url("../static/image_2.png");
     background-size:     cover;    
     background-repeat:   no-repeat;
-    background-position: center center;    
+    background-position: center center;     */
+/* } */
+
+.hero-section {
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    object-fit: contain;
 }
 
 .main-page-cards {
